--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
       <div class="col-1">1 col</div>
     </div>
 
+    <div class="row">
+      <div class="col-6 nested">
+        <div class="row">
+          <div class="col-2 green">Nested 2 col</div>
+          <div class="col-2 green">Nested 2 col</div>
+          <div class="col-8 green">Nested 8 col</div>
+        </div>
+      </div>
+
+      <div class="col-6">
+
+      </div>
+    </div>
+
   </div>  
 </body>
 </html>
