--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
         </div>
       </div>
 
-      <div class="col-6">
-
+      <div class="col-6 nested">
+        <div class="row">
+          <div class="col-6 green">Nested 6 col</div>
+          <div class="col-6 green">Nested 6 col</div>
+        </div>
       </div>
     </div>
 
