--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
   <div class="container">
+
+    <!-- FIRST EXERCISE -->
     <h1>
       Esercizio per casa
     </h1>
@@ -70,6 +72,7 @@
       </div>
     </div>
 
+    <!-- SECOND EXERCISE -->
     <div class="row space-top">
       <div class="col-12"></div>
     </div>
@@ -108,7 +111,7 @@
     <h2>
       Offset
     </h2>
-    
+
     <div class="row">
       <div class="col-offset-11 col-1"></div>
     </div>
