mushroom hat finished

--- a/bonus/bonus.html
+++ b/bonus/bonus.html
@@ -30,6 +30,70 @@
       <div class="col-1 black"></div>
     </div>
 
+    <div class="row">
+      <div class="col-offset-1 col-1 black"></div>
+      <div class="col-2 red"></div>
+      <div class="col-8 orange"></div>
+      <div class="col-2 red"></div>
+      <div class="col-1 black"></div>
+    </div>
+
+    <div class="row">
+      <div class="col-offset-1 col-1 black"></div>
+      <div class="col-1 red"></div>
+      <div class="col-5 orange"></div>
+      <div class="col-3 white"></div>
+      <div class="col-2 orange"></div>
+      <div class="col-1 red"></div>
+      <div class="col-1 black"></div>
+    </div>
+
+    <div class="row">
+      <div class="col-1 black"></div>
+      <div class="col-1 white"></div>
+      <div class="col-4 orange"></div>
+      <div class="col-5 white"></div>
+      <div class="col-4 orange"></div>
+      <div class="col-1 black"></div>
+    </div>
+
+    <div class="row">
+      <div class="col-1 black"></div>
+      <div class="col-2 white"></div>
+      <div class="col-2 orange"></div>
+      <div class="col-7 white"></div>
+      <div class="col-3 orange"></div>
+      <div class="col-1 black"></div>
+    </div>
+
+    <div class="row">
+      <div class="col-1 black"></div>
+      <div class="col-1 white"></div>
+      <div class="col-4 orange"></div>
+      <div class="col-5 white"></div>
+      <div class="col-4 orange"></div>
+      <div class="col-1 black"></div>
+    </div>
+
+    <div class="row">
+      <div class="col-1 black"></div>
+      <div class="col-1 red"></div>
+      <div class="col-2 orange"></div>
+      <div class="col-2 orange"></div>
+      <div class="col-5 white"></div>
+      <div class="col-2 red"></div>
+      <div class="col-2 orange"></div>
+      <div class="col-1 black"></div>
+    </div>
+
+    <div class="row">
+      <div class="col-1 black"></div>
+      <div class="col-3 red"></div>
+      <div class="col-8 black"></div>
+      <div class="col-3 red"></div>
+      <div class="col-1 black"></div>
+    </div>
+
 
 
 
