half mushroom face done

--- a/bonus/bonus.html
+++ b/bonus/bonus.html
@@ -94,6 +94,29 @@
       <div class="col-1 black"></div>
     </div>
 
+    <!-- SKIN -->
+    <div class="row">
+      <div class="col-offset-1 col-3 black"></div>
+      <div class="col-2 shade"></div>
+      <div class="col-1 black"></div>
+      <div class="col-2 shade"></div>
+      <div class="col-1 black"></div>
+      <div class="col-2 shade"></div>
+      <div class="col-3 black"></div>
+    </div>
+
+    <div class="row">
+      <div class="col-offset-2 col-1 black"></div>
+      <div class="col-2 shade"></div>
+      <div class="col-1 skin"></div>
+      <div class="col-1 black"></div>
+      <div class="col-2 skin"></div>
+      <div class="col-1 black"></div>
+      <div class="col-1 skin"></div>
+      <div class="col-2 shade"></div>
+      <div class="col-1 black"></div>
+    </div>
+
 
 
 
