--- a/bonus/bonus.html
+++ b/bonus/bonus.html
@@ -117,14 +117,23 @@
       <div class="col-1 black"></div>
     </div>
 
+    <div class="row">
+      <div class="col-offset-2 col-1 black"></div>
+      <div class="col-1 shade"></div>
+      <div class="col-8 skin"></div>
+      <div class="col-1 shade"></div>
+      <div class="col-1 black"></div>
+    </div>
 
+    <div class="row">
+      <div class="col-offset-3 col-1 black"></div>
+      <div class="col-8 skin"></div>
+      <div class="col-1 black"></div>
+    </div>
 
-
-
-
-
-
-  </div>
-  
+    <div class="row">
+      <div class="col-offset-4 col-8 black"></div>
+    </div>
+  </div>  
 </body>
 </html>
